--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -102,6 +102,7 @@ $text-layout-width: 960px !default
 $flood-layout-space-horizontal: $text-layout-space-horizontal !default
 // максимальная ширина текстового блока выходящего за пределы текста
 $flood-layout-width: 1400px !default
+$flood-layout-width--ea: 1200px !default
 // максимальная ширина для элементов тянушихся максимально
 $wide-layout-width: null !default // переменная создана на случай необходимости ограничить максимальную ширину
 
