--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -337,10 +337,10 @@
 				padding-top: round($text-layout-space-horizontal--sm*1.5)
 
 .ea-contacts__panel
-	padding-top: round($text-layout-space-horizontal*1.5)
+	padding-top: round($text-layout-space-horizontal)
 
 	+media('<desk-hd')
-		padding-top: round($text-layout-space-horizontal--lg*1.5)
+		padding-top: round($text-layout-space-horizontal--lg)
 
 	+media('<tab-lg')
 		padding-top: round($text-layout-space-horizontal--md*1.5)
