--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -239,6 +239,10 @@ $product-basket-label-width--sm: 100px !default
 // ordering
 $ordering-gap: 60px !default
 
+// news
+$ea-news-previews-inner-space: 30px
+$ea-news-previews-inner-space--sm: 20px
+
 // animation
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
