--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -223,7 +223,8 @@
 		+display-inline-block-middle
 
 	& > i
-		+margin-horizontal(10px)
+		//+margin-horizontal(10px)
+		margin: -2px 5px 2px
 
 		&:first-child
 			margin-left: 0
