--- a/src/sass/pages/_ea-home.sass
+++ b/src/sass/pages/_ea-home.sass
@@ -40,13 +40,13 @@ $ea-main-section-max-width-lg: 960px !default
 	display: flex
 	justify-content: space-between
 	+font-bold
-	+font(48px, round-float(58/48, 1))
-	margin-bottom: $bottom-space--md
+	+font(36px, round-float(58/48, 1))
+	margin-bottom: 3rem
 	color: $text-color
 	text-align: center
 
 	+media('<desk-lg')
-		font-size: 42px
+		font-size: 32px
 		margin-bottom: $bottom-space
 
 	+media('<tab-lg')
@@ -124,6 +124,7 @@ $ea-main-section-max-width-lg: 960px !default
 
 	.ea-main-section__title
 		color: white
+		text-align: left
 
 /*ea main sections with background image end
 
@@ -883,6 +884,11 @@ $odds-icon-size--md: 40px !default
 /* share list end
 
 /* ea main section stock
+.ea-main-section--stock
+	.ea-main-section__title
+		text-align: left
+		margin-bottom: 23px
+
 /* ea-stock-slider
 .ea-stock-slider
 	// before slide load
@@ -899,23 +905,10 @@ $odds-icon-size--md: 40px !default
 	&.slick-initialized, .no-js &
 		// after slide load
 		white-space: normal
-		overflow: visible
 		opacity: 1
 		visibility: visible
+		overflow: visible
 		// after slide load end
-
-	&::before,
-	&::after
-		content: ""
-		display: block
-		position: absolute
-		top: 0
-		height: 100%
-		width: 1000px
-		background-color: #fff
-		opacity: 0.5
-		z-index: 1
-		pointer-events: none
 
 	&::before
 		left: 100%
@@ -924,7 +917,7 @@ $odds-icon-size--md: 40px !default
 		right: 100%
 
 	.slick-list
-		overflow: visible
+		+margin-horizontal(-10px)
 
 	.slick-dots
 		bottom: 16px
@@ -941,7 +934,7 @@ $odds-icon-size--md: 40px !default
 				box-shadow: 0 0 3px rgba(255, 255, 255, 0.45)
 
 				&, .ea-site &
-					background-color: $base-color-alt--ea
+					background-color: black
 
 				&::before
 					$space: 1px
@@ -1086,7 +1079,147 @@ $odds-icon-size--md: 40px !default
 /* ea-stock-slider end
 /* ea main section stock end
 
-/* ea main section news
+/* ea main benefits
+.ea-benefits
+	margin-bottom: 2rem
+
+	&:last-child
+		margin-bottom: 0
+
+.ea-benefits__list
+	+grid-parent(40px)
+	+clear-spacing
+
+.ea-benefits__item
+	+grid-item(6, 40px)
+	+font(18px, round-float(22/18, 2))
+	letter-spacing: normal
+
+	svg
+		display: block
+		margin-bottom: 25px
+		+size(60px)
+
+/* ea main benefits end
+
+/* ea main news
+/* ea-news-previews
+.ea-news-previews
+	overflow: hidden
+	margin-bottom: 22px
+
+	&:last-child
+		margin-bottom: 0
+
+.ea-news-previews__list
+	padding: 0 0 1px 1px
+	+clear-spacing
+
+.ea-news-previews__item
+	position: relative
+	display: inline-block
+	vertical-align: top
+	width: calc(#{round-float(100%/3, 4)} + 1px)
+	margin: 0 0 -1px -1px
+	+font-bold
+	+font(1.8rem, round-float(24/18, 2))
+	letter-spacing: normal
+
+	+media('<tab-lg')
+		width: round-float(100%/1, 4)
+
+.ea-news-previews__inner
+	display: block
+	position: relative
+	height: 100%
+	padding: #{round($ea-news-previews-inner-space)} #{$ea-news-previews-inner-space} #{$ea-news-previews-inner-space*2.5}
+	text-decoration: none
+	color: white
+	border: 1px solid white
+	transition-property: background
+	transition-duration: $animation-speed
+
+	+media('<desk-sb')
+		padding: #{round($ea-news-previews-inner-space--sm)} #{$ea-news-previews-inner-space--sm} #{$ea-news-previews-inner-space--sm*3}
+
+	//.no-touchevents &
+		&:hover
+			background: $bg-color-light
+
+.ea-news-previews__figure
+	position: relative
+	margin: 0 auto 26px
+	max-width: 320px
+	letter-spacing: normal
+
+	&:before
+		+pseudo-block-relative()
+		+ratio(27, 15)
+
+.ea-news-previews__img
+	+cover-abs()
+	font-size: $font-size
+	letter-spacing: normal
+	backface-visibility: hidden
+
+	img
+		display: block
+		max-height: 100%
+		max-width: 100%
+		+centering-transform-rel()
+
+.ea-news-previews__content
+	position: relative
+
+.ea-news-previews__title
+	overflow: hidden
+	margin-bottom: 16px
+	+font-alt-bold
+	+font(18px, 26px)
+	letter-spacing: normal
+	max-height: calc(26px * 3)
+
+.ea-news-previews__text
+	position: relative
+	overflow: hidden
+	+font(16px, 26px)
+	letter-spacing: normal
+	max-height: calc(26px * 15)
+
+	+media('<desk-hd')
+		+font(14px, 20px)
+		max-height: calc(20px * 15)
+
+	+media('<desk-sb')
+		max-height: calc(20px * 7)
+
+	+media('<tab-lg')
+		max-height: none
+
+	& > *:last-child
+		margin-bottom: 0
+
+.ea-news-previews__footer
+	position: absolute
+	bottom: 0
+	left: 0
+	width: 100%
+	padding: 0 #{$ea-news-previews-inner-space} #{round($ea-news-previews-inner-space*0.8)}
+
+	+media('<desk-sb')
+		padding: 0 #{$ea-news-previews-inner-space--sm} #{round($ea-news-previews-inner-space--sm*0.8)}
+
+.ea-news-previews__date
+	display: block
+	+font-normal
+	+font(14px, 26px)
+	letter-spacing: normal
+	color: white
+
+/* news-previews end
+/* ea main news end
+
+/* ea main section contacts
 .ea-main-section--contacts
 	background-color: $bg-color-alt
 
@@ -1098,6 +1231,25 @@ $odds-icon-size--md: 40px !default
 
 	.ea-main-section__title
 		text-align: left
+		position: relative
+		max-width: $flood-layout-width--ea
+		margin: 0 auto
+		overflow: visible
+		height: 0
+		z-index: 5
+
+		h2
+			position: relative
+			top: $text-layout-space-horizontal
+
+			+media('<desk-hd')
+				top: $text-layout-space-horizontal--lg
+
+			+media('<tab-lg')
+				top: $text-layout-space-horizontal--md
+
+			+media('<tab-sm')
+				top: $text-layout-space-horizontal--sm
 
 .ea-contacts
 	position: relative
@@ -1159,8 +1311,7 @@ $odds-icon-size--md: 40px !default
 				margin: -8px 0 0 -8px
 
 			path
-				fill: inherit
-
+				fill: currentColor
 
 		// hover
 		&:hover
@@ -1189,16 +1340,16 @@ $odds-icon-size--md: 40px !default
 		margin-bottom: 30px
 .main-map
 	.ea-contacts__panel &
-		height: 710px
+		height: 370px
 
-		+media('<desk-lg')
-			height: 640px
-
-		+media('<desk-sb')
-			height: 480px
-
-		+media('<tab-lg')
-			height: 360px
+		//+media('<desk-lg')
+		//	height: 640px
+		//
+		//+media('<desk-sb')
+		//	height: 480px
+		//
+		//+media('<tab-lg')
+		//	height: 360px
 
 .map-popup
 	color: $text-color
@@ -1233,4 +1384,129 @@ $odds-icon-size--md: 40px !default
 				display: inline
 
 
-/* ea main section news end
+/* contacts-accordion
+.contacts-accordion
+	margin-bottom: $bottom-space--md
+	border-bottom: 2px solid $outline-color
+
+	&:last-child
+		margin-bottom: 0
+
+	& > a
+		display: block
+		position: relative
+		padding: 18px 0
+		+font-bold
+		+font(24px, round-float(32/24, 2))
+		color: $text-color
+		text-decoration: none
+		transition-property: color
+		transition-duration: $animation-speed
+
+		&:hover
+			color: $base-color
+
+			.ea-site &
+				color: $base-color--ea
+
+		& > i
+			$this-icon-lines-width: 12px
+			$this-icon-lines-height: 2px
+			$this-icon-lines-color: $text-color
+
+			position: absolute
+			right: 0
+			top: 50%
+			+size(16px, 10px)
+			margin-top: -5px
+			backface-visibility: hidden
+
+			&::before, &::after
+				+pseudo()
+				bottom: 0
+				backface-visibility: hidden
+				+size($this-icon-lines-width, $this-icon-lines-height)
+				background-color: $this-icon-lines-color
+				transition-property: background-color
+				transition-duration: $animation-speed
+
+			&::before
+				right: 50%
+				transform-origin: bottom right
+				transform: rotate(45deg)
+
+			&::after
+				left: 50%
+				transform-origin: bottom left
+				transform: rotate(-45deg)
+
+		&:hover
+			& > i
+				&::before, &::after
+					background-color: $base-color
+
+					.ea-site &
+						background-color: $base-color--ea
+
+		&.is-open i
+			transform: rotate(0.5turn)
+
+		& > span
+			display: block
+			position: relative
+			margin-right: 25px
+
+		& + div
+			padding: 18px 0
+			display: none
+			+font(16px, round-float(24/16, 2))
+
+			& > *:last-child
+				margin-bottom: 0
+
+	h4
+		+font-bold
+		+font(14px, round-float(24/14, 2))
+		letter-spacing: 0.05em
+		text-transform: uppercase
+		color: inherit
+		margin-bottom: $bottom-space
+
+	.cols
+		+clear-spacing
+		+grid-parent($grid-space)
+		margin-bottom: $bottom-space
+
+		+media('<desk-hd')
+			+grid-parent($grid-space--sm)
+
+	.col
+		+grid-item(3, $grid-space)
+		+font(18px, round-float(32/18, 2))
+		letter-spacing: normal
+
+		+media('<desk-hd')
+			+grid-item-responsive(3, $grid-space--sm)
+
+		+media('<mob-lg')
+			+grid-item-responsive(1, $grid-space--sm)
+
+		ul
+			margin: 0 0 10px
+			padding: 0
+
+			&:last-child
+				margin-bottom: 0
+
+			li
+				padding: 0
+				margin: 0
+
+				&:last-child
+					margin-bottom: 0
+
+				&::before
+					content: none
+
+/* contacts-accordion end
+/* ea main section contacts end
